# modern-software-dev-assignments

./: prompts.md  pyproject.toml
build_a_code_agent/: agent.py  my_agent.py
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  writeup.md
week2/app/services/: extract.py
week2/tests/: test_extract.py
week3/: README.md  server.py  spec.md
week3/tests/: test_server.py
week4/: CLAUDE.md
week4/backend/: __init__.py
week4/backend/app/: models.py  schemas.py
week4/backend/app/routers/: notes.py
week4/backend/app/services/: action_parser.py
week4/backend/tests/: test_action_parser.py  test_tags.py
week4/data/: seed.sql
week4/frontend/: app.js  index.html  styles.css
week5/: CLAUDE.md  Makefile  prompts.md
week5/backend/app/: exceptions.py  main.py  models.py  schemas.py
week5/backend/app/routers/: action_items.py  notes.py  tags.py
week5/backend/app/services/: extract.py
week5/backend/tests/: test_action_items.py  test_extract.py  test_extraction_endpoint.py  test_notes.py  test_tags.py
week5/docs/: TASKS.md  task10_plan.md  task11_plan.md  task8_plan.md  task9_plan.md
week5/frontend/src/: App.jsx  api.js
week5/frontend/src/__tests__/: NotesList.test.jsx  (+1 more)
week6/: CLAUDE.md  writeup.md
week6/backend/tests/: test_action_items.py  test_notes.py
week7/: CLAUDE.md  Makefile  writeup.md
week7/backend/app/: schemas.py
week7/backend/tests/: test_extract.py  test_notes.py
week7/docs/: task1_plan.md  task2_plan.md
week7/frontend/: app.js  index.html
(+8 files in other folders)
